--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "scripts": {
     "dev": "vite",
     "build": "run-p type-check \"build-only {@}\" --",
+    "build:singlefile": "run-p type-check \"build-only-singlefile {@}\" --",
     "preview": "vite preview",
     "build-only": "vite build",
+    "build-only-singlefile": "vite build --config vite.config.singlefile.ts",
     "type-check": "vue-tsc --build --force"
   },
   "dependencies": {
@@ -23,6 +25,7 @@
     "sass": "^1.70.0",
     "typescript": "~5.3.0",
     "vite": "^5.0.11",
+    "vite-plugin-singlefile": "^1.0.0",
     "vue-tsc": "^1.8.27"
   }
 }
