--- a/package.json
+++ b/package.json
@@ -1,32 +1,40 @@
 {
-  "name": "vue-timer-app",
-  "version": "0.0.0",
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "preview": "vite preview",
-    "type-check": "vue-tsc --build --force",
-    "build-only-production": "vite build",
-    "build-only-singlefile": "vite build --config vite.config.singlefile.ts",
-    "build:production": "run-p type-check build-only-production --",
-    "build:singlefile": "run-p type-check build-only-singlefile --",
-    "build": "run-p type-check build-only-production build-only-singlefile --"
-  },
-  "dependencies": {
-    "@vueuse/core": "^10.7.2",
-    "vue": "^3.4.15"
-  },
-  "devDependencies": {
-    "@tsconfig/node20": "^20.1.2",
-    "@types/node": "^20.11.10",
-    "@vitejs/plugin-vue": "^5.0.3",
-    "@vue/tsconfig": "^0.5.1",
-    "npm-run-all2": "^6.1.1",
-    "sass": "^1.70.0",
-    "typescript": "~5.3.0",
-    "vite": "^5.0.11",
-    "vite-plugin-singlefile": "^1.0.0",
-    "vue-tsc": "^1.8.27"
-  }
+    "name": "vue-timer-app",
+    "version": "0.0.0",
+    "private": true,
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "preview": "vite preview",
+        "format": "bun run prettier . --write",
+        "type-check": "vue-tsc --build --force",
+        "build-only-production": "vite build",
+        "build-only-singlefile": "vite build --config vite.config.singlefile.ts",
+        "build:production": "run-p type-check build-only-production --",
+        "build:singlefile": "run-p type-check build-only-singlefile --",
+        "build": "run-p type-check build-only-production build-only-singlefile --"
+    },
+    "dependencies": {
+        "@vueuse/core": "^10.7.2",
+        "vue": "^3.4.15"
+    },
+    "devDependencies": {
+        "@tsconfig/node20": "^20.1.2",
+        "@types/node": "^20.11.10",
+        "@vitejs/plugin-vue": "^5.0.3",
+        "@vue/tsconfig": "^0.5.1",
+        "npm-run-all2": "^6.1.1",
+        "prettier": "^3.2.5",
+        "sass": "^1.70.0",
+        "typescript": "~5.3.0",
+        "vite": "^5.0.11",
+        "vite-plugin-singlefile": "^1.0.0",
+        "vue-tsc": "^1.8.27"
+    },
+    "prettier": {
+        "trailingComma": "es5",
+        "tabWidth": 4,
+        "semi": false,
+        "singleQuote": true
+    }
 }
