--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "prettier": {
         "trailingComma": "es5",
         "tabWidth": 4,
-        "semi": false,
+        "semi": true,
         "singleQuote": true
     }
 }
